samples/_failures_safe/1761553311_f3dab2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ecc10331.c:178:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  178 | Event get
      | ^~~~~
